# turnaround-project

./: Makefile  README.md  pyproject.toml
mlruns/0/: meta.yaml
mlruns/122881035427325884/: meta.yaml
mlruns/122881035427325884/0543638c5c6b4c76a15406d32129c749/: meta.yaml
mlruns/122881035427325884/15b1e3f05a12404e96c8d373265c8726/: meta.yaml
mlruns/122881035427325884/184851df96dd48b797217b6851ecd259/: meta.yaml
mlruns/122881035427325884/187854d584ba4fa6b4364779b0471d1b/: meta.yaml
mlruns/122881035427325884/1e2614c2b846491b872a25b5261cc850/: meta.yaml
mlruns/122881035427325884/1e66039a7512473ba67acc172e1c5d50/: meta.yaml
mlruns/122881035427325884/2252d2e76a40420c9919d8ac62d35cce/: meta.yaml
mlruns/122881035427325884/2795a78451bf403dabf163d2a5f4dcdc/: meta.yaml
mlruns/122881035427325884/2f82ecee3999498e9340e0abf20c1084/: meta.yaml
mlruns/122881035427325884/384d9e4c88a44caab1f6b3e0136b30eb/: meta.yaml
mlruns/122881035427325884/3d4199d6878e4049a21e8660cb6cd138/: meta.yaml
mlruns/122881035427325884/3e7038d21c59491a8cf1a21947da352d/: meta.yaml
mlruns/122881035427325884/4a18e8b8c8c4485ea9139e66b433beed/: meta.yaml
mlruns/122881035427325884/54fd1d13883648d7960d5c59a69c364a/: meta.yaml
mlruns/122881035427325884/55ba2806418a49dfbc98c9ff05a7c97f/: meta.yaml
mlruns/122881035427325884/57de2415dd054c2d84877529d5d0ab72/: meta.yaml
mlruns/122881035427325884/5e060267b8e246b8afd8aa3238f21717/: meta.yaml
mlruns/122881035427325884/61ead7bcdc9b491e83dd26a26a988245/: meta.yaml
notebooks/: Turnaround.ipynb  turnaround_old.ipynb
(+888 files in other folders)
